# ssondo

./: .gitignore  .md  CITATION.cff  LICENSE  README.md
inference_ssondo/: .gitignore  README.md  pyproject.toml  readme.md
inference_ssondo/ssondo/: __init__.py  model.py  preprocess.py
inference_ssondo/ssondo/models/: model_utils.py  pooling_layers.py  utils.py
inference_ssondo/ssondo/models/ERes2Net/: model.py  pooling_layers.py
inference_ssondo/ssondo/models/MobileNetV3/: block_types.py  model.py
inference_ssondo/ssondo/models/dymn/: dy_block.py  model.py
inference_ssondo/tests/: test_inference.py
notebooks/: pyproject.toml  readme.md  ssondo_clustering_evaluation.ipynb  ssondo_clustering_evaluation.py  ssondo_linear_probe_esc50.ipynb  ssondo_linear_probe_esc50.py
training_ssondo/: CLAUDE.md  __init__.py  pyproject.toml  readme.md  run_pipeline.sh  setup.sh
training_ssondo/cluster_teachers_embeddings/: README.md  config.py  dataset.py  evaluate_clustering.py  label_prediction.py  learn_kmeans.py  results.ipynb  run_clustering.sh  utils.py
training_ssondo/download_subset_of_audioset/: README.md  download_audioset.py  utils.py
training_ssondo/extract_teachers_knowledge/: README.md  audioset_feature_extraction.py  config.py  dataset.py  models_wrappers.py
training_ssondo/knowledge_distillation_training/: README.md  config.py  data_augmentation.py  data_pipeline.py  dataset.py  main.py  model.py  system.py  training_components.py  utils.py
training_ssondo/scripts/: generate_metadata.py
training_ssondo/utils/: README.md  audioset_loader.py  portable_m2d.py  preprocess.py
training_ssondo/utils/student_models/: flop_count.py  model_utils.py  pooling_layers.py  receptive_field.py  utils.py
training_ssondo/utils/student_models/ERes2Net/: model.py  model_custom.py  pooling_layers.py  separable_conv_model.py
training_ssondo/utils/student_models/MobileNetV3/: model.py  utils.py
training_ssondo/utils/student_models/dymn/: model.py
training_ssondo/utils/student_models/quantizable_models/MobileNetV3/: block_types.py  model.py  utils.py
