[project]
name = "ssondo"
version = "0.1.0"
description = "Lightweight audio inference from SSONDO student models"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=1.26.3",
    "einops==0.7.0",
    "timm",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["ssondo*"] } }
