[project]
name = "ssondo"
version = "0.1.1"
description = "S-SONDO: Lightweight audio embeddings from self-supervised knowledge distillation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mohammed Ali El Adlouni" },
    { name = "Aurian Quelennec" },
    { name = "Pierre Chouteau" },
    { name = "Geoffroy Peeters" },
    { name = "Slim Essid" },
]
keywords = ["audio", "embeddings", "knowledge-distillation", "self-supervised", "sound"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.24",
    "einops>=0.7",
    "timm>=0.4.12",
    "huggingface-hub>=0.20",
]

[project.urls]
Homepage = "https://github.com/MedAliAdlouni/ssondo_temp"
Repository = "https://github.com/MedAliAdlouni/ssondo_temp"
Issues = "https://github.com/MedAliAdlouni/ssondo_temp/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "soundfile>=0.12.1",
    "ruff>=0.15",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["ssondo*"] } }
